--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background: $white;
+	background: https://image.ibb.co/j2EDxk/background.jpg;
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
