--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-background-image: url("https://ibb.co/n3BMOQ");
+background-image: url("https://image.ibb.co/k0jxxk/bape_camo_copy.jpg");
   font: 18px/1.4 $helvetica;
   color: $darkGray;
   background-repeat: no-repeat;
