--- a/style.scss
+++ b/style.scss
@@ -19,11 +19,12 @@ html {
 
 body {
 background-image: url("https://image.ibb.co/k0jxxk/bape_camo_copy.jpg");
-	opacity: 70
-  font: 18px/1.4 $helvetica;
-  color: $darkGray;
+	width: 100%;
+	height: 100%;
   background-repeat: no-repeat;
   background-attachment: fixed;
+	  font: 18px/1.4 $helvetica;
+       color: $darkGray;
 }
 
 .container {
