--- a/style.scss
+++ b/style.scss
@@ -23,6 +23,8 @@ background-image: url("https://image.ibb.co/k0jxxk/bape_camo_copy.jpg");
   color: $darkGray;
   background-repeat: no-repeat;
   background-attachment: fixed;
+	background-size: 100% 100%;
+	
 }
 
 .container {
