--- a/style.scss
+++ b/style.scss
@@ -24,6 +24,7 @@ background-image: url("https://image.ibb.co/k0jxxk/bape_camo_copy.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
 	background-size: 100% 100%;
+	opacity:0.8;
 	
 }
 
