--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,7 @@ html {
 
 body {
 background-image: url("https://image.ibb.co/k0jxxk/bape_camo_copy.jpg");
-	opacity: 0.8;
+	image-opacity: 0.8;
 	
   font: 18px/1.4 $helvetica;
   color: $darkGray;
