--- a/style.scss
+++ b/style.scss
@@ -22,7 +22,7 @@ background-image: url("https://image.ibb.co/k0jxxk/bape_camo_copy.jpg");
 	image-opacity: 0.8;
 	
   font: 18px/1.4 $helvetica;
-  color: $darkGray;
+  color: $white;
   background-repeat: no-repeat;
   background-attachment: fixed;
 	background-size: 100% 100%;
@@ -38,7 +38,7 @@ background-image: url("https://image.ibb.co/k0jxxk/bape_camo_copy.jpg");
 
 h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
-  color: $darkerGray;
+  color: $white;
   font-weight: bold;
 
   line-height: 1.7;
@@ -67,7 +67,7 @@ h3 {
 
 h4 {
   font-size: 18px;
-  color: $gray;
+  color: $white;
 }
 
 p {
