--- a/style.scss
+++ b/style.scss
@@ -361,3 +361,4 @@ body {
 	background-position:center;
 	margin:-100px 0 0 -100px; /* is width and height divided by two */
 }
+<a class="menu_links" onclick="displayData(11,1,0,'A')" onmouseover="" style="cursor: pointer;"> A </a>
