--- a/style.scss
+++ b/style.scss
@@ -361,4 +361,6 @@ body {
 	background-position:center;
 	margin:-100px 0 0 -100px; /* is width and height divided by two */
 }
-
+span.crosshair {
+    cursor: crosshair;
+}
